main/default/objects/Rating_Reference_Info__c/Rating_Reference_Info__c.object-meta.xml
<CustomObject>
    <label>Rating Reference Info</label>
    <nameField>
        <displayFormat>RRI-{0000}</displayFormat>
        <label>Rating Reference Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Reference Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>