main/default/objects/Rating_Reference_Info__c/fields/Option_List__c.field-meta.xml
<CustomField>
    <fullName>Option_List__c</fullName>
    <label>Option List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>