main/default/objects/Rating_Reference_Info__c/fields/Reference_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating Reference Name</label>
    <referenceTo>Rating_Reference_Name__c</referenceTo>
    <relationshipLabel>Rating Reference Infos</relationshipLabel>
    <relationshipName>Rating_Reference_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>