main/default/objects/Rating_Reference_Info__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>