main/default/objects/Rating_Reference_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_Name_Id__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Option_List__c</columns>
    <columns>Rating_Reference_Info_Id__c</columns>
    <columns>Reference_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>